--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+# Artists Land Ignores
 Assets/Materials
 Assets/Materials.*
 Assets/Models
@@ -8,71 +9,64 @@ Assets/PoseManager
 Assets/PoseManager.*
 Assets/SampleScenes
 Assets/SampleScenes.*
-Assets/Scenes
-Assets/Scenes.*
-Assets/SceneTrackCache
-Assets/SceneTrackCache.*
-Library
-ProjectSettings
-*.csproj
-
-
-Assembly-CSharp-Editor-firstpass.csproj
-Assembly-CSharp-firstpass.csproj
-Assembly-CSharp.csproj
-SceneTrack.Unity.sln
-Temp
-.idea/.idea.SceneTrack.Unity/.idea
-.idea/.idea.SceneTrack.Unity
-.vscode
-Assets/Plugins/JetBrains.meta
-Assets/Plugins/JetBrains/Editor.meta
-Assets/Plugins/JetBrains
-SceneTrack.Unity.userprefs
-*.st
-scenetrack.log
-scenetrackfbx.log
-Library/AnnotationManager
-Library/assetDatabase3
-Library/AssetImportState
-Library/AssetServerCacheV3
-Library/AssetVersioning.db
-Library/BuildPlayer.prefs
-Library/BuildSettings.asset
-Library/CurrentLayout.dwlt
-Library/CurrentMaximizeLayout.dwlt
-Library/EditorUserBuildSettings.asset
-Library/EditorUserSettings.asset
-Library/expandedItems
-Library/InspectorExpandedItems.asset
-Library/LastSceneManagerSetup.txt
-Library/LibraryFormatVersion.txt
-Library/MonoManager.asset
-Library/ProjectSettings.asset
-Library/ScriptMapper
-Library/ShaderCache.db
-Library/shadercompiler-UnityShaderCompiler0.log
-Library/metadata
-Library/ShaderCache
-Library/ScriptAssemblies
-scenetrackmidi.log
-scenetrackvideo.log
-midi.txt
-Assets/Plugins/Editor/RootMotion
 Assets/ootii
+Assets/ootii.meta
+Assets/Plugins/Editor.meta
+Assets/Plugins/Editor/RootMotion
+Assets/Plugins/Editor/RootMotion.meta
+Assets/Plugins/RootMotion
+Assets/Plugins/RootMotion.meta
 Assets/CharacterControls.cs
 Assets/CharacterControls.cs.meta
 Assets/MouseDrag.cs
 Assets/MouseDrag.cs.meta
-Assets/ootii.meta
-Assets/Plugins/Editor.meta
-Assets/Plugins/RootMotion.meta
-Assets/Plugins/Editor/RootMotion.meta
-Assembly-CSharp-Editor.csproj
-.DS_Store
-Standard Assets.meta
-Assets/Plugins/RootMotion
 Assets/Standard Assets
+Assets/Standard Assets.meta
 Assets/Tests
+
+# IDE Ignores
+Assets/Plugins/JetBrains
+Assets/Plugins/JetBrains.meta
+Assets/Plugins/JetBrains/Editor
+Assets/Plugins/JetBrains/Editor.meta
+.idea
+.vscode
+
+# Keeping Repository Clean
+Assets/Scenes
+Assets/Scenes.*
+Temp
+
+# SceneTrack Folders
+Assets/SceneTrackCache
+Assets/SceneTrackCache.*
+
+# SceneTrack Files
+*.st
+scenetrack.log
+scenetrackfbx.log
+scenetrackmidi.log
+scenetrackvideo.log
+midi.txt
+
+
+# Unity Ignores
+Library
+ProjectSettings
+
+# Unity Files
+*.csproj
+Assembly-CSharp-Editor.csproj
+Assembly-CSharp-Editor-firstpass.csproj
+Assembly-CSharp-firstpass.csproj
+Assembly-CSharp.csproj
+SceneTrack.Unity.sln
+SceneTrack.Unity.userprefs
 GCAP.Unity.userprefs
 GCAP.Unity.sln
+
+# Platform Files
+.DS_Store
+
+
+
