Remove test folder

--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,7 @@ Assets/MouseDrag.cs.meta
 Assets/Standard Assets
 Assets/Standard Assets.meta
 Assets/Tests
+Assets/Tests.meta
 
 # IDE Ignores
 Assets/Plugins/JetBrains
